# spotless

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cargo.cmake  cli11.cmake  curl.cmake  ftxui.cmake  librespot.cmake  nlohmann.cmake  toml11.cmake  tomlplusplus.cmake
include/: cache.hpp  cli.hpp  config.hpp  phone.hpp  spotify.hpp  ui.hpp
joho/: Cargo.toml
joho/src/: main.rs
kao/: Cargo.toml
kao/src/: main.rs
kao/templates/: content.html  footer.html  index.html  style.css
kao/templates/css/: footer.css
kao/templates/page/: page.html
librespot_wrapper/: Cargo.toml
librespot_wrapper/src/: lib.rs
shiri/: Cargo.toml
shiri/src/: main.rs
src/: cache.cpp  cli.cpp  config.cpp  librespot_wrapper.cpp  librespot_wrapper.hpp  main.cpp  phone.cpp  spot.hpp  spotify.cpp  ui.cpp
sukima/: accounts.sql
todokeru/: Cargo.toml
todokeru/src/: main.rs
waka/: Cargo.toml
waka/src/: main.rs
